<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:shadowColor="#000000"
                android:text="@string/main_header"
                android:textSize="30sp"
                tools:text="@string/main_header" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="#000000"
                android:text="@string/second_header"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="@string/second_header" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15sp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/imageView27"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cake1" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cake_name1" />

                    <TextView
                        android:id="@+id/textView62"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cake_name1_country" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20sp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent">


                    <ImageView
                        android:id="@+id/imageView99"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/choco_cake" />

                    <TextView
                        android:id="@+id/textView99"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cake_name2" />

                    <TextView
                        android:id="@+id/textView98"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cake_name2_country" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20sp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout4"
                    tools:ignore="ExtraText">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/pistache_cake" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cake_name3" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cake_name3_country" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView12"
            style="@style/small_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_offers" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="73dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/food3" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/food_headers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_weight="1"
                        android:text="@string/food_name3" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/food_price3" />

                    <View
                        android:id="@+id/circle3"
                        style="@style/green_circle"
                        android:background="@drawable/circle_background" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_weight="1"
                        android:text="@string/available" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="5dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/food1" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/food_headers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_weight="0.5"
                        android:text="@string/food_name1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/food_price2" />

                    <View
                        android:id="@+id/circle1"
                        style="@style/green_circle"
                        android:background="@drawable/circle_background" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_weight="1"
                        android:text="@string/available" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:scaleType="fitStart"
                        android:src="@drawable/food2" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/food_headers"
                        android:layout_width="47dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:text="@string/food_name2" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/food_price1" />

                    <View
                        android:id="@+id/circle2"
                        style="@style/green_circle"
                        android:background="@drawable/circle_background" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_weight="0.75"
                        android:text="@string/available" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="15sp"
                        android:layout_weight="1"
                        android:scaleType="fitStart"
                        android:src="@drawable/food4" />

                    <TextView
                        android:id="@+id/textView21"
                        style="@style/food_headers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_weight="1"
                        android:text="@string/food_name4" />

                    <TextView
                        android:id="@+id/textView59"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/food_price4" />

                    <View
                        android:id="@+id/circle4"
                        style="@style/green_circle"
                        android:background="@drawable/circle_background" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_weight="1"
                        android:text="@string/available" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:contentDescription="pic"
            android:contextClickable="true"
            android:src="@drawable/ic_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="29dp"
            android:layout_height="30dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="5sp"
            android:layout_marginTop="15dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/icon_home" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="5sp"
            android:layout_marginTop="15dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_plus" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="5sp"
            android:layout_marginTop="15dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_person" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="5sp"
            android:layout_marginTop="15dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_more" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>